--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,9 @@ sysinfo.txt
 *.unitypackage
 *.app
 
+# JetbrainsRider idea
+*/.idea/workspace.xml
+
 # Crashlytics generated file
 crashlytics-build.properties
 
