--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *Assets/Scenes/SampleScene.unity filter=lfs diff=lfs merge=lfs -text
 *Assets/Scenes/SolarSystem.unity filter=lfs diff=lfs merge=lfs -text
+*Assets/Scenes/SolarSystemSmall.unity filter=lfs diff=lfs merge=lfs -text
